--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1033,11 +1033,11 @@ rhino:
     - from_address: null
       to_address: "0x28780349a33eee56bb92241baab8095449e24306"
       method: "0x504f7f6f"
-      comment: "verifyAvailabilityProof, verifying DAC (first used 2020-12-02) "
+      comment: "verifyAvailabilityProof, verifying DAC (first used 2020-12-02, last used 2025-03-05) "
     - from_address: null
       to_address: "0x5d22045daceab03b158031ecb7d9d06fad24609b"
       method: "0x538f9406"
-      comment: "updateState (first used 2020-05-31)"
+      comment: "updateState (first used 2020-05-31, last used 2025-03-05)"
 
 fraxtal:
   name: "Fraxtal"
@@ -1473,7 +1473,11 @@ zircuit:
     - from_address: "0xE8C20EA8eF100d7aa3846616E5D07A5aBb067C65"
       to_address: "0x92ef6af472b39f1b363da45e35530c24619245a4"
       method: "0xa9efd6b8"
-      comment: "proposeL2Output (first used 2024-07-02)"
+      comment: "proposeL2Output (first used 2024-07-02, last used 2025-03-11)"
+    - from_address: "0xE8C20EA8eF100d7aa3846616E5D07A5aBb067C65"
+      to_address: "0x92Ef6Af472b39F1b363da45E35530c24619245A4"
+      method: "0x1bf75d29"
+      comment: "proposeL2Output v2 (first used 2025-03-12)"
   beacon:
     - from_address: "0xaf1e4f6a47af647f87c0ec814d8032c4a4bff145"
       to_address: null
