--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -209,7 +209,6 @@ optimism:
       to_address: null
       method: "0x472777c6"
       comment: "attack, by central resolver (first used 2024-05-16)"
-
   beacon:
     - from_address: "0x6887246668a3b87f54deb3b94ba47a6f63f32985"
       to_address: null
@@ -252,6 +251,18 @@ base:
       to_address: null
       method: null
       comment: "blob producer"
+
+celo:
+  name: "Celo"
+  l1:
+    - from_address: "0x4E8B8dd9611845f5FB80F43662dBeeFBb47a75F6"
+      to_address: "0xFF00000000000000000000000000000000042220"
+      method: null
+      comment: "EigenDA hashes? (first used 2025-03-19)"
+    - from_address: null
+      to_address: "0x1f2EC15657dd9Cb304d414f0257C23aAf73B64e4"
+      method: "0x82ecf2f6"
+      comment: "create (first used 2025-03-12) ???"
 
 blast:
   name: "Blast"
