--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -882,11 +882,19 @@ zksync_era:
     - from_address: "0x3527439923a63f8c13cf72b8fe80a77f6e572092"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-06-06)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-06-06, last used 2025-03-12)"
     - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-06-06)"
+      comment: "commitBatchesSharedBridge (first used 2024-06-06, last used 2025-03-12)"
+    - from_address: "0x3527439923a63F8C13CF72b8Fe80a77f6e572092"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-12)"
+    - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-12)"
   beacon:
     - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
       to_address: null
