--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -271,6 +271,22 @@ celo:
       to_address: "0x78e86406656efa6808a678ef18e305f5bd9a9a51"
       method: "0x82ecf2f6"
       comment: "create (first used 2025-03-21)"
+    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used ???)"
+    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used ???)"
+    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (first used ???)"
+    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (first used ???)"
 
 blast:
   name: "Blast"
