add lens & update ZK stack to new contract

--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -931,11 +931,31 @@ sophon:
     - from_address: "0xf3b07f6744e06cd5074b7d15ed2c33760837ce1f"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-10-22)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-10-22, last used ...)"
     - from_address: "0x4cc87b0a504047967ced9a955431b3229237e7de"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-10-22)"
+      comment: "commitBatchesSharedBridge (first used 2024-10-22, last used ...)"
+    - from_address: "0xf3b07f6744e06cd5074b7d15ed2c33760837ce1f"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-27)"
+    - from_address: "0x4cc87b0a504047967ced9a955431b3229237e7de"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-27)"
+
+
+
+
+    - from_address: ""
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used )"
+    - from_address: ""
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used )"
 
 abstract:
   name: "Abstract"
@@ -943,11 +963,19 @@ abstract:
     - from_address: "0x54ab716d465be3d5eeca64e63ac0048d7a81659a"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-10-28)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-10-28, last used ...)"
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-10-26)"
+      comment: "commitBatchesSharedBridge (first used 2024-10-26, last used ...)"
+    - from_address: "0x54ab716d465be3d5eeca64e63ac0048d7a81659a"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-25)"
+    - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-25)"
   beacon:
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: null
@@ -977,11 +1005,19 @@ grvt:
     - from_address: "0x58d14960e0a2be353edde61ad719196a2b816522"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-11-13)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-11-13, last used ...)"
     - from_address: "0x0b114d4675cb79507e68f2616c93e124122c6ef0"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-11-13)"
+      comment: "commitBatchesSharedBridge (first used 2024-11-13, last used ...)"
+    - from_address: "0x58d14960e0a2be353edde61ad719196a2b816522"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-24)"
+    - from_address: "0x0b114d4675cb79507e68f2616c93e124122c6ef0"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-24)"
 
 cronos:
   name: "Cronos zkEVM"
@@ -989,11 +1025,19 @@ cronos:
     - from_address: "0x7fea26a181a792b5107ee0a31e434f5dbcbbe0b7"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-07-27)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-07-27, last used ...)"
     - from_address: "0xb9d48daf26f3cbe01a959f09f98e8a2ec8204122"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-07-27)"
+      comment: "commitBatchesSharedBridge (first used 2024-07-27, last used ...)"
+    - from_address: "0xb9d48daf26f3cbe01a959f09f98e8a2ec8204122"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-26)"
+    - from_address: "0x7fea26a181a792b5107ee0a31e434f5dbcbbe0b7"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-26)"
 
 treasure:
   name: "Treasure"
@@ -1001,11 +1045,31 @@ treasure:
     - from_address: "0x2572835e02b59078711aa0800490e80975e4169d"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-11-29)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-11-29, last used ...)"
     - from_address: "0x4131719fb0fa1cb3e3a052a4a309ea7575d8c283"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-11-26)"
+      comment: "commitBatchesSharedBridge (first used 2024-11-26, last used ...)"
+    - from_address: "0x2572835e02b59078711aa0800490e80975e4169d"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-25)"
+    - from_address: "0x4131719fb0fa1cb3e3a052a4a309ea7575d8c283"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-25)"
+
+lens:
+  name: "Lens"
+  l1:
+    - from_address: "0xaaf7b278bac078aa4f9bdc8e0a93cde604aa67d9"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-25)"
+    - from_address: "0xb1a0c1f1b50436ac94b8ce9ae919b0e820acb374"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-03-25)"
 
 taiko:
   name: "Taiko"
