--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -255,38 +255,14 @@ base:
 celo:
   name: "Celo"
   l1:
-    - from_address: "0x4E8B8dd9611845f5FB80F43662dBeeFBb47a75F6"
-      to_address: "0xFF00000000000000000000000000000000042220"
+    - from_address: "0x0cd08c7f7A96AA9635f761b49216B9eA74C5cA60"
+      to_address: "0xff00000000000000000000000000000000042220"
       method: null
-      comment: "EigenDA hashes? (first used 2025-03-19)"
+      comment: "EigenDA (first used 2025-03-26)"
     - from_address: null
-      to_address: "0x1f2EC15657dd9Cb304d414f0257C23aAf73B64e4"
+      to_address: "0xFbAC162162f4009Bb007C6DeBC36B1dAC10aF683"
       method: "0x82ecf2f6"
-      comment: "create (first used 2025-03-12, last used 2025-03-14)"
-    - from_address: null
-      to_address: "0x2384acf4110f8935376d363c6e16dc881cb4697b"
-      method: "0x82ecf2f6"
-      comment: "create (first used 2025-03-19, last used 2025-03-21)"
-    - from_address: null
-      to_address: "0x78e86406656efa6808a678ef18e305f5bd9a9a51"
-      method: "0x82ecf2f6"
-      comment: "create (first used 2025-03-21)"
-    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
-      to_address: null
-      method: "0x2810e1d6"
-      comment: "resolve, by central resolver (first used ???)"
-    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
-      to_address: null
-      method: "0x03c2924d"
-      comment: "resolveClaim, by central resolver (first used ???)"
-    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
-      to_address: null
-      method: "0x60e27464"
-      comment: "claimCredit, by central resolver (first used ???)"
-    - from_address: "0x9e21944B9Dd761e7a89Ecb17be005E955e750f2B"
-      to_address: null
-      method: "0x472777c6"
-      comment: "attack, by central resolver (first used ???)"
+      comment: "create (first used 2025-03-26)"
 
 blast:
   name: "Blast"
