--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -920,21 +920,13 @@ sophon:
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
       comment: "commitBatchesSharedBridge (first used 2025-03-27)"
-    - from_address: "0xf3b07f6744e06cd5074b7d15ed2c33760837ce1f"
-      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
-      method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-27)"
-    - from_address: "0x4cc87b0a504047967ced9a955431b3229237e7de"
-      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
-      method: null
-      comment: "commitBatchesSharedBridge (first used 2025-03-27)"
 
 abstract:
   name: "Abstract"
   l1:
     - from_address: "0x54ab716d465be3d5eeca64e63ac0048d7a81659a"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
-      method: null
+      method: ""
       comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-10-28, last used ...)"
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
