--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -926,7 +926,7 @@ abstract:
   l1:
     - from_address: "0x54ab716d465be3d5eeca64e63ac0048d7a81659a"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
-      method: ""
+      method: null
       comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-10-28, last used ...)"
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
