--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -942,7 +942,7 @@ abstract:
       comment: "commitBatchesSharedBridge (first used 2025-03-25)"
   beacon:
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
-      to_address: null
+      to_address: "0x2344523"
       method: null
       comment: "blob producer"
 
