--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -800,7 +800,7 @@ scroll:
     - from_address: null
       to_address: "0x0d7E906BD9cAFa154b048cFa766Cc1E54E39AF9B"
       method: "0xd99bc80e"
-      comment: "L2 price oracle, setL2BaseFee (first used 2024-02-22)"
+      comment: "L2 price oracle, setL2BaseFee (first used 2024-02-22, last used 2025-04-24)"
     - from_address: null
       to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
       method: "0x1325aca0"
@@ -808,7 +808,11 @@ scroll:
     - from_address: null
       to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
       method: "0x86b053a9"
-      comment: "commitBatchWithBlobProof (first used 2024-08-21)"
+      comment: "commitBatchWithBlobProof (first used 2024-08-21, last used 2025-04-22)"
+    - from_address: null
+      to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
+      method: "0x9bbaa2ba"
+      comment: "commitBatches (first used 2025-04-22)"
     - from_address: null
       to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
       method: "0x31fa742d"
@@ -820,7 +824,11 @@ scroll:
     - from_address: null
       to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
       method: "0x4f099e3d"
-      comment: "finalizeBundleWithProof (first used 2024-08-21)"
+      comment: "finalizeBundleWithProof (first used 2024-08-21, last used 2025-04-22)"
+    - from_address: null
+      to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
+      method: ""
+      comment: "finalizeBundlePostEuclidV2 (first used 2025-04-22)"
   beacon:
     - from_address: "0xcf2898225ed05be911d3709d9417e86e0b4cfc8f"
       to_address: null
