--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1340,16 +1340,24 @@ swell:
     - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
       to_address: null
       method: "0x2810e1d6"
-      comment: "resolve, by central resolver (first used 2024-12-12)"
+      comment: "resolve, by central resolver (first used 2024-12-12, last used 2025-04-24)"
     - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
       to_address: null
       method: "0x03c2924d"
-      comment: "resolveClaim, by central resolver (first used 2024-12-12)"
-    - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
+      comment: "resolveClaim, by central resolver (first used 2024-12-12, last used 2025-04-24)"
+    - from_address: "0x4e80a8355536875a514fcde60164492d2abed096"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-04-24)"
+    - from_address: "0x4e80a8355536875a514fcde60164492d2abed096"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-04-24)"
+    - from_address: "0x4e80a8355536875a514fcde60164492d2abed096"
       to_address: null
       method: "0x60e27464"
       comment: "claimCredit, by central resolver (not yet used)"
-    - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
+    - from_address: "0x4e80a8355536875a514fcde60164492d2abed096"
       to_address: null
       method: "0x472777c6"
       comment: "attack, by central resolver (not yet used)"
