--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -457,11 +457,31 @@ zora:
     - from_address: "0x625726c858dbf78c0125436c943bf4b4be9d9033"
       to_address: "0x6f54ca6f6ede96662024ffd61bfd18f3f4e34dff"
       method: null
-      comment: "Commit Blob (Type 3, EIP4844 tx) OR different (before eip4844)"
+      comment: "Commit Blob Type 3 tx OR calldata pre eip4844"
     - from_address: null
       to_address: "0x9e6204f750cd866b299594e2ac9ea824e2e5f95c"
       method: "0x9aaab648"
-      comment: "OutputOracle, proposeL2Output"
+      comment: "OutputOracle, proposeL2Output (first used 2023-06-13, last used 2025-04-24)"
+    - from_address: "0x48247032092e7b0ecf5def611ad89eaf3fc888dd"
+      to_address: null
+      method: "0x82ecf2f6"
+      comment: "create, only whitelisted entitiy so far (first used 2025-04-24)"
+    - from_address: "0x48247032092e7b0ecf5def611ad89eaf3fc888dd"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-05-02)"
+    - from_address: "0x48247032092e7b0ecf5def611ad89eaf3fc888dd"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-05-02)"
+    - from_address: "0x48247032092e7b0ecf5def611ad89eaf3fc888dd"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0x48247032092e7b0ecf5def611ad89eaf3fc888dd"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
   beacon:
     - from_address: "0x625726c858dbf78c0125436c943bf4b4be9d9033"
       to_address: null
@@ -827,7 +847,7 @@ scroll:
       comment: "finalizeBundleWithProof (first used 2024-08-21, last used 2025-04-22)"
     - from_address: null
       to_address: "0xa13BAF47339d63B743e7Da8741db5456DAc1E556"
-      method: ""
+      method: "0xc1aa4e19"
       comment: "finalizeBundlePostEuclidV2 (first used 2025-04-22)"
   beacon:
     - from_address: "0xcf2898225ed05be911d3709d9417e86e0b4cfc8f"
