--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -353,8 +353,12 @@ morph:
   l1:
     - from_address: null
       to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
+      method: "0x428868b5"
+      comment: "commitBatch (first used 2025-05-12)"
+    - from_address: null
+      to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
       method: "0x4a8d544f"
-      comment: "commitBatch (first used 2025-01-13)"
+      comment: "commitBatch (first used 2025-01-13, last used 2025-05-12)"
     - from_address: null
       to_address: "0x759894Ced0e6af42c26668076Ffa84d02E3CeF60"
       method: "0xd63b3549"
@@ -938,7 +942,11 @@ zksync_era:
     - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2025-03-12)"
+      comment: "commitBatchesSharedBridge (first used 2025-03-12, last used 2025-05-12)"
+    - from_address: "0xE1D8d4C8656949764c2c9Fa9faB2C15d3F42e6C2"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-05-12)"
   beacon:
     - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
       to_address: null
