--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -558,17 +558,17 @@ metis:
       to_address: "0xFf00000000000000000000000000000000001088"
       method: null
       comment: "Hashes to data blobs (first used 2024-03-15)"
-    - from_address: null
+    - from_address: "0xcdf02971871b7736874e20b8487c019d28090019"
       to_address: "0x6a1db7d799fba381f2a518ca859ed30cb8e1d41a"
-      method: "0xa8cda37b"
+      method: null
       comment: "appendSequencerBatchByChainId (first used 2022-04-12, last used 2024-03-15)"
-    - from_address: null
+    - from_address: "0xcdf02971871b7736874e20b8487c019d28090019"
       to_address: "0x56a76bcc92361f6df8d75476fed8843edc70e1c9"
-      method: "0xa8cda37b"
+      method: null
       comment: "appendSequencerBatchByChainId (first used 2021-11-18, last used 2022-04-12)"
-    - from_address: null
+    - from_address: "0x9cb01d516d930ef49591a05b09e0d33e6286689d"
       to_address: "0xf209815e595cdf3ed0aaf9665b1772e608ab9380"
-      method: "0xd710083f"
+      method: null
       comment: "appendStateBatchByChainId (first used 2021-11-18, last used 2024-03-15)"
     - from_address: "0xf3CEB4C2ef996CdBc95C4E18c6D0CA988CC09040"
       to_address: "0xA2FaAAC9120c1Ff75814F0c6DdB119496a12eEA6"
