--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1345,10 +1345,14 @@ swell:
       to_address: "0x005dE5857e38dFD703a1725c0900E9C6f24cbdE0"
       method: null
       comment: "Commit Blob (first used 2025-04-05)"
+    - from_address: "0xA2Acb8142b64fabda103DA19b0075aBB56d29FbD"
+      to_address: null
+      method: "0x82ecf2f6"
+      comment: "Create (first used 2025-05-15)"
     - from_address: "0xfE5dD32c3799249dC6A5D637CCB2f28e0ec227e3"
       to_address: null
       method: "0x82ecf2f6"
-      comment: "Create (first used 2024-11-27)"
+      comment: "Create (first used 2024-11-27, last used 2025-05-15)"
     - from_address: "0x522a6F2e11C038Fc3d3C84BCA54f54F542Da62CD"
       to_address: null
       method: "0x2810e1d6"
