--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1112,6 +1112,10 @@ taiko:
       comment: "verifyBlocks (first used 2024-07-27, last used 2024-09-08)"
     - from_address: null
       to_address: null
+      method: "0xc9cc2843"
+      comment: "proveBatches (first used 2025-05-21)"
+    - from_address: null
+      to_address: null
       method: "0x10d008bd"
       comment: "proveBlock (first used 2024-05-25)"
     - from_address: null
@@ -1139,6 +1143,10 @@ taiko:
       to_address: null
       method: "0x0c8f4a10"
       comment: "proposeBlocksV2"
+    - from_address: null
+      to_address: null
+      method: "0x47faad14"
+      comment: "proposeBatch (first used 2025-05-21)"
 
 rhino:
   name: "rhinofi"
