--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1108,6 +1108,10 @@ taiko:
       comment: "proposeBlocksV2 (first used 2024-11-07)"
     - from_address: null
       to_address: null
+      method: "0x47faad14"
+      comment: "proposeBatch (first used 2025-05-21)"
+    - from_address: null
+      to_address: null
       method: "0x8778209d"
       comment: "verifyBlocks (first used 2024-07-27, last used 2024-09-08)"
     - from_address: null
@@ -1272,7 +1276,7 @@ kinto:
     - from_address: "0xe27f3f6db6824def1738b2aace2672ac59046a39"
       to_address: null
       method: null
-      comment: "blob producer (first used 2024-07-23)"
+      comment: "blob producer (first used 2024-07-23 last used 2025-05-17 ???)" 
 
 kroma:
   name: "Kroma"
