--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -991,16 +991,28 @@ abstract:
     - from_address: "0x54ab716d465be3d5eeca64e63ac0048d7a81659a"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-25)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-25, last used 2025-05-26)"
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2025-03-25)"
+      comment: "commitBatchesSharedBridge (first used 2025-03-25, last used 2025-05-26)"
+    - from_address: "0x415ed64d42bc0c37aeaaef79aa767d963ef38807"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-05-26)"
+    - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-05-26)"
   beacon:
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: null
       method: null
-      comment: "blob producer"
+      comment: "blob producer (last used 2025-05-26)"
+    - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2025-05-26)"
 
 zero_network:
   name: "ZERO Network"
