--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1235,11 +1235,31 @@ metal:
     - from_address: "0xC8187d40AD440328104A52BBed2D8Efc5ab1F1F6"
       to_address: "0x3b1f7ada0fcc26b13515af752dd07fb1cac11426"
       method: "0x9aaab648"
-      comment: "proposeL2Output (first used 2024-03-28)"
+      comment: "proposeL2Output (first used 2024-03-28, last used 2025-06-13)"
     - from_address: "0xc94c243f8fb37223f3eb2f7961f7072602a51b8b"
       to_address: "0xc83f7d9f2d4a76e81145849381aba02602373723"
       method: null
       comment: "commmit blob (first used 2024-03-27)"
+    - from_address: "0xC8187d40AD440328104A52BBed2D8Efc5ab1F1F6"
+      to_address: null
+      method: "0x82ecf2f6"
+      comment: "create, only whitelisted entitiy so far (first used 2025-06-13)"
+    - from_address: "0xC8187d40AD440328104A52BBed2D8Efc5ab1F1F6"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-06-21)"
+    - from_address: "0xC8187d40AD440328104A52BBed2D8Efc5ab1F1F6"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-06-21)"
+    - from_address: "0xC8187d40AD440328104A52BBed2D8Efc5ab1F1F6"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (not yet used)"
+    - from_address: "0xC8187d40AD440328104A52BBed2D8Efc5ab1F1F6"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (not yet used)"
   beacon:
     - from_address: "0xc94c243f8fb37223f3eb2f7961f7072602a51b8b"
       to_address: null
