--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1770,77 +1770,13 @@ mantle_testnet:
 plume:
   name: "Plume"
   l1:
-    - from_address: "0x17F187D978664C96ffD655996a45e085c403AD8b"
-      to_address: null
+    - from_address: null
+      to_address: "0x85eC1b9138a8b9659A51e2b51bb0861901040b59"
       method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 1/9 sequencers"
-    - from_address: "0x2E8C0869C173cC07c58186E9DeEA74314635b1E2"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 2/9 sequencers"
-    - from_address: "0x4ed0f98FB4c331e672653E832c55E0f9F402C228"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 3/9 sequencers"
-    - from_address: "0x74a0d46BA4F69cAB77A459f8B12dc531c7DaBf3C"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 4/9 sequencers"
-    - from_address: "0x85e70D857F6Fad7AD4ffc3fC95FD0fd8C396A09D"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 5/9 sequencers"
-    - from_address: "0xA4f98Ac0E083C79BAB53A3895082e8a4fbf12CDe"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 6/9 sequencers"
-    - from_address: "0xb9B2AeAe8D160a5bF9cb7FE7B2c8B58c0293FD5e"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 7/9 sequencers"
-    - from_address: "0xc7ef93FE91D4658bb422B11C5f8Ae17ae3B86D36"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 8/9 sequencers"
-    - from_address: "0xCEEAEC6b7e010fE1Ac253Ebd6f93eEBF9249Cd7e"
-      to_address: null
-      method: "0x8f111f3c"
-      comment: "addSequencerL2BatchFromOrigin 9/9 sequencers"
-    - from_address: "0x006F5B7E2D58fb4E53DEdaB8802FCdf2a5441DC7"
-      to_address: null
+      comment: "addSequencerL2BatchFromOrigin (first used 2025-02-20)"
+    - from_address: null
+      to_address: "0x35c60Cc77b0A8bf6F938B11bd3E9D319a876c2aC"
       method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 1/9 validators"
-    - from_address: "0x11f563dDbF266484Dd910A401A7e44299d80b1d5"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 2/9 validators"
-    - from_address: "0x16C1D3b4aDB6f0F468FCE7b802cE5AA0A2B06d03"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 3/9 validators"
-    - from_address: "0x33Bf8bF5aF3579D0E2305302409A5b6b4173c779"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 4/9 validators"
-    - from_address: "0x401Ba2e5037e3d8D1c32E77Dfd371501618604Bf"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 5/9 validators"
-    - from_address: "0x8fbEf9f7554aec9CCf62b88D86aE1C91F1599F7C"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 6/9 validators"
-    - from_address: "0x9DFaA1770bcE35EaB6a163D3cDE6cA1F3Ff7eA66"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 7/9 validators"
-    - from_address: "0xa017149a752BDd8723a09Cd6f40c388D38B8d202"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 8/9 validators"
-    - from_address: "0xd1e56283216127E1F40A3752735C94A13d97bc92"
-      to_address: null
-      method: null
-      comment: "confirmNextNode, stakeOnNewNode, stakeOnExistingNode 9/9 validators"
+      comment: "confirmNextNode, stakeOnNewNode, newStakeOnNewNode, stakeOnExistingNode, newStakeOnExistingNode, returnOldDeposit, withdrawStakerFunds (first used 2025-02-20)"
   celestia:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAADQSAB6M6v+s="
