--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1443,12 +1443,24 @@ bob:
     - from_address: null
       to_address: "0xdDa53E23f8a32640b04D7256e651C1db98dB11C1"
       method: "0x9aaab648"
-      comment: "Propose L2 Output (first used 2024-04-12)"
+      comment: "Propose L2 Output (first used 2024-04-12, last used 2025-07-17)"
+    - from_address: "0x7cB1022D30b9860C36b243E7B181A1d46f618C69"
+      to_address: null
+      method: "0xca0dc973"
+      comment: "Propose (first used 2025-07-17)"
+    - from_address: "0x7cB1022D30b9860C36b243E7B181A1d46f618C69"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-07-21)"
   beacon:
     - from_address: "0x08F9F14fF43E112B18c96f0986F28Cb1878f1D11"
       to_address: "0x3A75346f81302aAc0333FB5DCDD407e12A6CfA83"
       method: null
       comment: "Commit Blob (first used 2024-04-11)"
+    - from_address: "0x7cB1022D30b9860C36b243E7B181A1d46f618C69"
+      to_address: null
+      method: null
+      comment: "Propose (first used 2025-07-17)"
 
 swell:
   name: "Swellchain"
