--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1405,7 +1405,28 @@ mint:
     - from_address: null
       to_address: "0xB751A613f2Db932c6cdeF5048E6D2af05F9B98ED"
       method: "0x9aaab648"
-      comment: "proposeL2Output (first used 2024-05-14)"
+      comment: "proposeL2Output (first used 2024-05-14, last used 2025-07-24)"
+
+    - from_address: null
+      to_address: "0x3d53Df1e69A32F98dFCcf23CCB689763E21A78bA"
+      method: "0x82ecf2f6"
+      comment: "Create (first used 2025-07-25)"
+    - from_address: "0x3d53Df1e69A32F98dFCcf23CCB689763E21A78bA"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-07-28)"
+    - from_address: "0x3d53Df1e69A32F98dFCcf23CCB689763E21A78bA"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-07-28)"
+    - from_address: "0x3d53Df1e69A32F98dFCcf23CCB689763E21A78bA"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (never used)"
+    - from_address: "0x3d53Df1e69A32F98dFCcf23CCB689763E21A78bA"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (never used)"
     - from_address: "0x68bdFecE01535090c8f3C27ec3b1AE97E83fA4aA"
       to_address: "0x4e31448a098393727b786e25B54E59DcA1b77FE1"
       method: null
