--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -340,6 +340,26 @@ polynomial:
       to_address: "0xe512D477Cc89196AF2cE837f6AB8EA30e199f757"
       method: "0x9aaab648"
       comment: "proposeL2Output (first used 2024-06-11)"
+    - from_address: null
+      to_address: "0xe9394679d0f0676E4a2dE99F8ed6B4aCb16c5f0f"
+      method: "0x82ecf2f6"
+      comment: "Create (first used 2025-07-24)"
+    - from_address: "0x5DA28F0186051a9F7b9eE2553FFdc165EB0A6714"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-07-28)"
+    - from_address: "0x5DA28F0186051a9F7b9eE2553FFdc165EB0A6714"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-07-28)"
+    - from_address: "0x5DA28F0186051a9F7b9eE2553FFdc165EB0A6714"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (never used)"
+    - from_address: "0x5DA28F0186051a9F7b9eE2553FFdc165EB0A6714"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (never used)"
     - from_address: "0x67a44ce38627f46f20b1293960559ed85dd194f1"
       to_address: "0x0bd57e83B5E0f9eCD84d559bB58e1EcFEEdD2565"
       method: null
@@ -1406,7 +1426,6 @@ mint:
       to_address: "0xB751A613f2Db932c6cdeF5048E6D2af05F9B98ED"
       method: "0x9aaab648"
       comment: "proposeL2Output (first used 2024-05-14, last used 2025-07-24)"
-
     - from_address: null
       to_address: "0x3d53Df1e69A32F98dFCcf23CCB689763E21A78bA"
       method: "0x82ecf2f6"
