--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -589,7 +589,27 @@ orderly:
     - from_address: null
       to_address: "0x5e76821C3c1AbB9fD6E310224804556C61D860e0"
       method: "0x9aaab648"
-      comment: "OutputOracle, proposeL2Output"
+      comment: "OutputOracle, proposeL2Output (first used 2023-10-06, last used 2025-07-24)"
+    - from_address: null
+      to_address: "0xC8BF04A73704051E5E274F1B43B1F2F153Db2136"
+      method: "0x82ecf2f6"
+      comment: "Create (first used 2025-07-25)"
+    - from_address: "0x74BaD482a7f73C8286F50D8Aa03e53b7d24A5f3B"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-07-28)"
+    - from_address: "0x74BaD482a7f73C8286F50D8Aa03e53b7d24A5f3B"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-07-28)"
+    - from_address: "0x74BaD482a7f73C8286F50D8Aa03e53b7d24A5f3B"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (never used)"
+    - from_address: "0x74BaD482a7f73C8286F50D8Aa03e53b7d24A5f3B"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (never used)"
   celestia:
     -  namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAABYTLU4hLOUU="
 
