--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -575,7 +575,27 @@ derive:
     - from_address: null
       to_address: "0x1145E7848c8B64c6cab86Fd6D378733385c5C3Ba"
       method: "0x9aaab648"
-      comment: "OutputOracle, proposeL2Output"
+      comment: "OutputOracle, proposeL2Output (frist used 2023-11-15, last used 2025-07-24)"
+    - from_address: null
+      to_address: "0x87DAFf495b5F6c4f79CEeAAF85f1Ef3df3B30d21"
+      method: "0x82ecf2f6"
+      comment: "Create (first used 2025-07-25)"
+    - from_address: "0x03e820562ffd2e0390787caD706EaF1FF98C2608"
+      to_address: null
+      method: "0x2810e1d6"
+      comment: "resolve, by central resolver (first used 2025-07-28)"
+    - from_address: "0x03e820562ffd2e0390787caD706EaF1FF98C2608"
+      to_address: null
+      method: "0x03c2924d"
+      comment: "resolveClaim, by central resolver (first used 2025-07-28)"
+    - from_address: "0x03e820562ffd2e0390787caD706EaF1FF98C2608"
+      to_address: null
+      method: "0x60e27464"
+      comment: "claimCredit, by central resolver (never used)"
+    - from_address: "0x03e820562ffd2e0390787caD706EaF1FF98C2608"
+      to_address: null
+      method: "0x472777c6"
+      comment: "attack, by central resolver (never used)"
   celestia:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAACLkdk+ILapw="
 
