--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1039,10 +1039,6 @@ zksync_era:
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
       comment: "commitBatchesSharedBridge (first used 2024-06-06, last used 2025-03-12)"
-    - from_address: "0x3527439923a63F8C13CF72b8Fe80a77f6e572092"
-      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
-      method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-12)"
     - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
@@ -1050,7 +1046,15 @@ zksync_era:
     - from_address: "0xE1D8d4C8656949764c2c9Fa9faB2C15d3F42e6C2"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2025-05-12)"
+      comment: "commitBatchesSharedBridge (first used 2025-05-12, last used 2025-07-28)"
+    - from_address: "0x3527439923a63F8C13CF72b8Fe80a77f6e572092"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-03-12, last used 2025-05-12)"
+    - from_address: "0x30066439887c0a509cb38e45c9262e6924a29bbd"
+      to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-05-12, last used 2025-07-28)"
   beacon:
     - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
       to_address: null
@@ -1059,7 +1063,7 @@ zksync_era:
     - from_address: "0xE1D8d4C8656949764c2c9Fa9faB2C15d3F42e6C2"
       to_address: null
       method: null
-      comment: "blob producer (first used 2025-05-12)"
+      comment: "blob producer (first used 2025-05-12, last used 2025-07-28)"
 
 sophon:
   name: "Sophon"
