--- a/.github/workflows/update_economics_dune.yml
+++ b/.github/workflows/update_economics_dune.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         pip install pyyaml pandas requests
 
-    - name: Run the Python Script
+    - name: Update Dune Mapping
       env:
         DUNE_KEY: ${{ secrets.DUNE_KEY }}
       run: |
